// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cycles createSubGraph 1`] = `
Graph {
  "_data": Map {
    1 => Set {
      2,
    },
    2 => Set {
      3,
    },
    3 => Set {
      1,
    },
  },
  "vertexParams": Object {},
}
`;

exports[`cycles createSubGraph 2`] = `
Graph {
  "_data": Map {
    2 => Set {
      3,
    },
    3 => Set {},
  },
  "vertexParams": Object {},
}
`;

exports[`cycles leastIndexScc 1`] = `
Graph {
  "_data": Map {
    1 => Set {
      2,
    },
    2 => Set {
      3,
    },
    3 => Set {
      1,
    },
  },
  "minVertex": 1,
  "vertexParams": Object {},
}
`;

exports[`cycles simpleCycles 1`] = `
Array [
  Array [
    1,
    2,
    3,
    1,
  ],
  Array [
    1,
    5,
    2,
    3,
    1,
  ],
  Array [
    2,
    3,
    2,
  ],
  Array [
    2,
    3,
    6,
    4,
    5,
    2,
  ],
  Array [
    2,
    3,
    4,
    5,
    2,
  ],
  Array [
    8,
    9,
    8,
  ],
]
`;

exports[`cycles simpleCycles 2`] = `
Array [
  Array [
    1,
    2,
    3,
    1,
  ],
  Array [
    3,
    4,
    5,
    3,
  ],
]
`;
